New syntax for generic classes in `customTypeMappings` parameter (#384)